<resources>
    <string name="app_name">FitSpace</string>
    <string name="toolbarName">FitSpace</string>
    <string name="TextWelcome">Bem vindo ao FitSpace</string>
    <string name="textName">Nome</string>
    <string name="hintName">Ex: João Silva</string>
    <string name="textEmail">Email</string>
    <string name="hintEmail">Ex: joao@gmail.com</string>
    <string name="textNick">Como gostaria de ser chamado?</string>
    <string name="hintNick">Joãozinho</string>
    <string name="textPassword">Senha</string>
    <string name="hintPassword">********</string>
    <string name="textWarning">A senha precisa conter no mínimo 8 digitos, letras maiúsculas, letras minúsculas e números</string>
    <string name="textWarning2">Dados incorretos</string>
    <string name="textNewUser">Ainda não é cadastrado? <xliff:g id="link" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" example="register">Registra-se aqui.</xliff:g></string>
    <string name="textPhone">Número de telefone</string>
    <string name="hintPhone">Ex: +55 11 40028922</string>
    <string name="textDate">Data de nascimento</string>
    <string name="hintDate">03/10/1990</string>
    <string name="textGender">Sexo</string>
    <string name="rbFemale">Mulher</string>
    <string name="rbMale">Homem</string>
    <string name="textButton">Salvar</string>
    <string name="textButtonEntrar">Entrar</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Fragment Home
    <string name="body_mass_index">Índice de Massa Corporal</string>
    <string name="calories">Calorias</string>
    <string name="imc_icon">Ícone IMC</string>
    <string name="calories_icon">Ícone Calorias</string>
    <string name="goal">Objetivos</string>
    <string name="stretch">Alogamentos</string>
    <string name="goal_icon">Ícone Objetivos</string>
    <string name="stretch_icon">Ícone Alongamentos</string>
    <string name="icon_routine">Ícone Rotinas Diárias</string>
    <string name="routines">Rotinas diárias</string>
    <string name="tips">Dicas de saúde</string>

    // Fragment Settings
    <string name="edit_profile">Editar perfil</string>
    <string name="notifications">Notificações</string>
    <string name="language">Idioma</string>
    <string name="dark_mode">Tema escuro</string>
    <string name="logout">Sair</string>
    <string name="info">Sobre o aplicativo</string>

    // Feature Settings About
    <string name="vesion">Versão 1.0</string>
    <string name="Creator">Vernardo Oechsler, Gabriel Levindo, Jeferson Barros,\n Samuel Gil, Sergio Bismark, Victor Boico</string>
    <string name="More">Aplicativo criado em ambito de estudo para aperfeiçoamento de nossas habilidades, dentro da comunidade DevSpace</string>

    <string name="dica">Dicas de saúde</string>

    <string-array name="WeeklyExercise">
        <item>1 vez na semana</item>
        <item>2 vezes na semana</item>
        <item>3 vezes na semana</item>
        <item>4 vezes na semana</item>
        <item>5 vezes na semana</item>
        <item>6 vezes na semana</item>
        <item>7 vezes na semana</item>
    </string-array>
</resources>