<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    tools:context=".presentation.view.SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_sign_up"
            style="@style/ToolbarStyle"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/toolbar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/toolbarName"
            style="@style/TookBarText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_toolbar"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/textview_name"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/name_cardview"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_name">

                <EditText
                    android:id="@+id/name_edt_text"
                    style="@style/Description"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/hintName"
                    android:padding="10dp" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textview_email"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textEmail"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_cardview" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/email_cardview"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_email">

                <EditText
                    android:id="@+id/email_edt_text"
                    style="@style/Description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/hintEmail"
                    android:padding="10dp" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textview_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Title"
                android:text="@string/textNick"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_cardview" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/nick_cardview"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_nick">

                <EditText
                    android:id="@+id/nick_edt_text"
                    style="@style/Description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/hintNick"
                    android:padding="10dp" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textview_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Title"
                android:text="@string/textPassword"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nick_cardview"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/password_cardview"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_password">

                <EditText
                    android:id="@+id/password_edt_text"
                    style="@style/Description"
                    android:maxLength="16"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:password="true"
                    android:hint="@string/hintPassword"
                    android:padding="10dp" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textView_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/textWarning"
                style="@style/Erro"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_cardview"
                android:fontFamily="@font/poppins_regular" />

            <TextView
                android:id="@+id/textview_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Title"
                android:text="@string/textPhone"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_warning"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/phone_cardview"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_phonenumber">

                <EditText
                    android:id="@+id/phone_edt_text"
                    style="@style/Description"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/hintPhone"
                    android:padding="10dp" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textview_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Title"
                android:text="@string/textDate"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_cardview"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/date_cardview"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_date">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/date_edt_text"
                        style="@style/Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hintDate"
                        android:padding="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btn_image_date"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/btn_image_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="@android:color/transparent"
                        android:layout_alignStart="@id/date_edt_text"
                        android:src="@drawable/calendar_both"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textview_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Title"
                android:text="@string/textGender"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_cardview"/>

            <RadioGroup
                android:id="@+id/radiogroup_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_gender">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_female"
                        style="@style/RadioButton"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/radio_button_selected"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        app:layout_constraintStart_toStartOf="parent"
                        android:onClick="onRadioButtonClicked"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/rbFemale" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_male"
                        style="@style/RadioButton"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_button_selected"
                        android:button="@android:color/transparent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/rbMale"
                        android:layout_marginStart="30dp"
                        app:layout_constraintStart_toEndOf="@+id/rb_female"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/textButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radiogroup_gender" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>